--- a/index.html
+++ b/index.html
@@ -8,17 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="refine | Build your React-based CRUD applications, without constraints."
-    />
-    <meta
-      data-rh="true"
-      property="og:image"
-      content="https://refine.dev/img/refine_social.png"
-    />
-    <meta
-      data-rh="true"
-      name="twitter:image"
-      content="https://refine.dev/img/refine_social.png"
+      content="Admin dashboard for S.A.F.E."
     />
     <title>
       S.A.F.E
