--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Admin dashboard for S.A.F.E."
-    />
-    <title>
-      S.A.F.E.
-    </title>
+    <meta name="description" content="Admin dashboard for S.A.F.E." />
+    <title>S.A.F.E.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
